# msgene

./: .gitignore  README.md  TASK.md  TODO.md  pyproject.toml
src/: database.py  graph.py  main.py  models.py  parsing.py  plotting.py  test_pydot_rank.py  validation.py
